tests/k8s_testcases/example_policies/withEndPort/withEndPort-networkpolicy3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-all-protocols-with-all-ports
  namespace: kube-system
spec:
  podSelector: {}
  #podSelector:
  #  matchLabels:
  #    tier: frontend
  policyTypes:
  - Ingress
  ingress:
    - ports:
        - port: 1
          endPort: 65535
          protocol: UDP
        - port: 1
          endPort: 65535
          protocol: TCP
        - port: 1
          endPort: 65535
          protocol: SCTP


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-all-traffic
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      tier: frontend
  policyTypes:
    - Ingress
  ingress:
    - {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-all-tcp-ver-one
  namespace: kube-system
spec:
  podSelector: {}
  #podSelector:
  #  matchLabels:
  #    tier: frontend
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 1
          endPort: 65535
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: enable-all-tcp-ver-two
  namespace: kube-system
spec:
  podSelector: {}
  #podSelector:
  #  matchLabels:
  #    tier: frontend
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 1
          endPort: 65535
