tests/k8s_testcases/example_policies/withEndPort/withEndPort-scheme.yaml
namespaceList: ../../example_podlist/ns_list.json
podList: ../../example_podlist/pods_list.json

networkConfigList:
  - name: np1
    networkPolicyList:
      - withEndPort-networkpolicy1.yaml
    expectedWarnings: 0
  - name: np2
    networkPolicyList:
      - withEndPort-networkpolicy2.yaml
    expectedWarnings: 0

  - name: np3
    networkPolicyList:
      - withEndPort-networkpolicy3.yaml
    expectedWarnings: 0

queries:
  - name: redundnacy_np2
    redundancy:
      - np2
    expected: 1
  - name: equivalence
    equivalence:
      - np1
      - np2
    expected: 0

  - name: equivalence
    equivalence:
      - np3/kube-system/enable-all-protocols-with-all-ports
      - np3/kube-system/enable-all-traffic
    expected: 1

  - name: semantic_diff
    semanticDiff:
      - np3/kube-system/enable-all-protocols-with-all-ports
      - np3/kube-system/enable-all-traffic
    expected: 2

  - name: connectivity-1
    connectivityMap:
      - np3/kube-system/enable-all-protocols-with-all-ports
    expected: 0

  - name: connectivity-2
    connectivityMap:
      - np3/kube-system/enable-all-traffic
    expected: 0

  - name: equivalence
    equivalence:
      - np3/kube-system/enable-all-tcp-ver-one
      - np3/kube-system/enable-all-tcp-ver-two
    expected: 0
